--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "4. Testing/Foundry/lib/forge-std"]
 	path = 4. Testing/Foundry/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "4. Testing/Foundry_ERC20/lib/forge-std"]
+	path = 4. Testing/Foundry_ERC20/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "4. Testing/Foundry_ERC20/lib/openzeppelin-contracts"]
+	path = 4. Testing/Foundry_ERC20/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
